# integra-cli

./: Cargo.toml  Integra.toml  build.rs  integra-cli-manifest.rc  integra-cli.exe.manifest
src/: handlers.rs  lib.rs  main.rs  validators.rs
src/config_templates/: generic.template.toml
src/lib/cfg/: config_models.rs  mod.rs
