[package]
name = "integra-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.132"
serde_derive = "1.0.132"
clap = "2.34.0"
voca_rs = "1.14.0"
toml = "0.5.8"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.6"